--- a/BaiTapLon/Week_01/Week_01/Week_01/Week_01.vcxproj
+++ b/BaiTapLon/Week_01/Week_01/Week_01/Week_01.vcxproj
@@ -78,6 +78,10 @@
     </ClCompile>
     <ClCompile Include="Bai_12.cpp">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Bai_13.cpp">
+      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
