TranTheNgocMai: finish Tuan_03 Bai-04_Cau-1-2: Bài 4. Tiếp tục các hàm xử lý trên ma trận vuông a cấp n (bài 2) 1. Sắp xếp đường chéo phụ tăng dần/giảm dần. 2. Sắp xếp ma trận sao cho: các dòng có chỉ số lẻ thì tăng dần, còn các dòng có chỉ số chẵn thì giảm dần.

--- a/BaiTapLon/Week_03/Week_03/Week_03/Week_03.vcxproj.filters
+++ b/BaiTapLon/Week_03/Week_03/Week_03/Week_03.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Bai_03.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
