--- a/BaiTapLon/Week_03/Week_03/Week_03/Week_03.vcxproj
+++ b/BaiTapLon/Week_03/Week_03/Week_03/Week_03.vcxproj
@@ -66,6 +66,10 @@
   <ItemGroup>
     <ClCompile Include="Bai_03.cpp">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Bai_04.cpp">
+      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
