LeGiaLong: finish Tuan_04 Bai-08: Nhập vào chuỗi s1 và s2, cho biết vị trí xuất hiện của chuỗi s2 trong s1 (nếu có). Nếu s2 không có trong s1, thực hiện nối s2 vào cuối s1.

--- a/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
+++ b/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Bai_07.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_08.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
