--- a/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
+++ b/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Bai_09.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_10.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
