TranTheNgocMai: finish Tuan_04 Bai-11: Nhập vào 1 mảng các chuỗi. Tìm xuất ra màn hình những chuỗi chứa toàn ký tự số.

--- a/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
+++ b/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Bai_10.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
