TranTheNgocMai: finish Tuan_04 Bai-12: Cho 2 chuỗi s1 và s2 là 2 từ (chỉ chứa chữ cái hoặc ký số). Tính xem cần thực hiện bao nhiêu phép biến đổi để chuyển chuỗi s1 thành s2. Biết rằng có 3 phép biến đổi - Thêm ký tự - Xóa ký tự - Đổi ký tự Ví dụ: xét 2 từ s1= “Kitten” và s2=“Sitting” Cần thực hiện 3 phép đổi để chuyển s1 thành s2. Đó là: - Đổi ‘K” thành ‘S’ - Đổi ‘e’ thành ‘i’ - Thêm ‘g’ vào cuối.

--- a/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj
+++ b/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj
@@ -82,6 +82,10 @@
     </ClCompile>
     <ClCompile Include="Bai_11.cpp">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Bai_12.cpp">
+      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
