--- a/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
+++ b/BaiTapLon/Week_04/Week_04/Week_04/Week_04.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="Bai_11.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_12.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
