--- a/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj.filters
+++ b/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Bai_07.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_08.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
