LeGiaLong: finish Tuan_06 Bai-10: Viết hàm tìm kiếm phần tử trên mảng đã sắp xếp theo kỹ thuật tìm kiếm nhị phân bằng phương pháp đệ quy.

--- a/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj
+++ b/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj
@@ -74,7 +74,9 @@
     </ClCompile>
     <ClCompile Include="Bai_09.cpp">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Bai_10.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
