LeGiaLong: finish Tuan_06 Bai-11: Tính số cách chia m phần thưởng cho n học sinh đã xếp theo thứ tự hạng tăng dần, phân chia sao cho học sinh đứng trước có số phần thưởng lớn hơn học sinh đứng sau, biết bằng: a. m>=2n b. m = n c. m>2n và mỗi học sinh đều có quà.

--- a/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj
+++ b/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj
@@ -76,7 +76,12 @@
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Bai_10.cpp" />
+    <ClCompile Include="Bai_10.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Bai_11.cpp">
+      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
