--- a/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj.filters
+++ b/BaiTapLon/Week_06/Week_06/Week_06/Week_06.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Bai_10.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bai_11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
